--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-  <title>Halo</title>
+  <title>Latihan</title>
   </head>
   <body>
-    <h>Halo!</h>
+    <h1>Halo!</h1>
   </body>
 </html>
